k8s/10-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: queue-system
spec:
  replicas: 1
  selector:
    matchLabels: { app: redis }
  template:
    metadata:
      labels: { app: redis }
    spec:
      containers:
        - name: redis
          image: redis:7
          ports:
            - containerPort: 6379
          resources:
            requests: { cpu: 100m, memory: 128Mi }
            limits: { memory: 512Mi, cpu: 200m }
          readinessProbe:
            tcpSocket: { port: 6379 }

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: queue-system
spec:
  selector: { app: redis }
  ports:
    - port: 6379
