k8s/20-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: queue-system

spec:
  replicas: 1
  selector:
    matchLabels: { app: api }
  template:
    metadata:
      labels: { app: api }
    spec:
      enableServiceLinks: false
      containers:
        - name: api
          image: queue-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000

          resources:
            requests: { cpu: 100m, memory: 128Mi }
            limits: { memory: 256Mi, cpu: 400m }
          readinessProbe:
            httpGet: { path: /health, port: 3000 }
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /health, port: 3000 }
            initialDelaySeconds: 10
            periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: queue-system
spec:
  selector: { app: api }
  ports:
    - port: 80
      targetPort: 3000
