k8s/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: queue-system
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /submit
            pathType: Prefix
            backend:
              service: { name: api, port: { number: 80 } }
          - path: /status
            pathType: Prefix
            backend:
              service: { name: api, port: { number: 80 } }
